style: P3C 规约审查 javadoc/格式修正 across modules